--- a/www/css/index.css
+++ b/www/css/index.css
@@ -8,3 +8,30 @@
   padding-bottom: 10px;
   height:60px;
 }
+
+.mymarker {
+	background-image: url('img/mymarker.png');
+    background-position: 0 0;
+	position: relative;
+	width: 50px;
+	height: 50px;
+	margin: 10px;
+	float: left;
+	list-style: none;
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+
+.myicon {
+	position: absolute;
+	top: 3px;
+	right: 8px;
+	bottom: 12px;
+	left: 7px;
+	background-image: url('img/avatar.jpg');
+	background-position: 50% 20%;
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	border-radius: 50%;
+	content: "";
+}
